# trl

./: Cargo.toml  README.md
src/: arg.rs  attribute_parser.rs  attribute_processors.rs  field_attrs.rs  helpers.rs  lib.rs  modifier.rs  new_from_args.rs  struct_attrs.rs
trl/: Cargo.toml
trl-getters/: Cargo.toml
trl-getters/src/: lib.rs
trl-global/: Cargo.toml
trl-global/src/: attrs.rs  helpers.rs  lib.rs
trl-setters/: Cargo.toml
trl-setters/src/: lib.rs
trl/src/: lib.rs
trl_codegen/: Cargo.toml  README.md
trl_codegen/src/: attribute_parser.rs  helpers.rs  lib.rs  modifier.rs  new_from_args.rs
trl_codegen/src/accessors/: accessor_arg.rs  accessor_field_attrs.rs  accessor_processor.rs  accessor_struct_attrs.rs  mod.rs
trl_codegen/src/constructor/: constructor_arg.rs  constructor_processor.rs  constructor_struct_attrs.rs  constructor_visibility.rs  mod.rs
