[package]
name = "trl"
version = "1.0.0"
edition = "2024"
authors = ["Maxim Okinawa <okinaijap@gmail.com>"]
description = "This library provides auto generation of some common methods based on Rust macros"
license = "MIT"
repository = "https://github.com/iokinai/trl"
homepage = "https://github.com/iokinai/trl"
documentation = "https://docs.rs/trl"
readme = "README.md"

keywords = ["macro", "attribute", "codegen"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = { version = "2.0.87", features = ["full"]}
