[package]
name = "trl"
version = "1.1.0"
edition = "2024"
authors = ["Maxim Okinawa <okinaijap@gmail.com>"]
description = "This library provides auto generation of some common methods based on Rust macros"
license = "MIT"
repository = "https://github.com/iokinai/trl"
homepage = "https://github.com/iokinai/trl"
documentation = "https://docs.rs/trl"
readme = "README.md"

keywords = ["macro", "attribute", "codegen"]
categories = ["development-tools::procedural-macro-helpers"]

[dependencies]
trl_codegen = { path = "../trl_codegen"}